# ai-pptist-system

./: .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose-dev.yml  docker-compose.yml
backend/: celery_app.py  main.py  pyproject.toml
backend/ai_pptist_backend.egg-info/: PKG-INFO
backend/app/: __init__.py
backend/app/api/v1/: router.py
backend/app/core/: celery.py  config.py  cos.py  image_config.py  log_messages.py  log_utils.py  mlflow_tracker.py  redis.py
backend/app/core/ai/: __init__.py  base.py  config.py  factory.py  models.py  registry.py  tracker.py
backend/app/core/cache/: __init__.py  redis.py
backend/app/core/config/: __init__.py  config.py  cos_config.py  image_config.py
backend/app/core/html/: __init__.py  html_converter.py  html_parser.py  html_utils.py  id_generator.py
backend/app/core/image_generation/: __init__.py  base.py
backend/app/core/imggen/: __init__.py  base.py  config.py  factory.py  models.py  registry.py  tracker.py
backend/app/core/llm/: client.py  executor.py  models.py  resolver.py  setting.py  tracker.py
backend/app/core/ocr/: __init__.py  hybrid_ocr_fusion.py  tencent_ocr_sdk_engine.py
backend/app/core/search/: __init__.py  utils.py
backend/app/core/storage/: __init__.py  abc.py  base_storage.py  cos_storage.py  exceptions.py  factory.py  models.py
backend/app/db/: database.py
backend/app/models/: ai_model.py  annotation.py  banana_generation_task.py  image.py  image_editing_task.py  image_parse_task.py  tag.py
backend/app/prompts/: __init__.py  utils.py
backend/app/prompts/annotation/: slide_analysis.yml
backend/app/repositories/: __init__.py  ai_model.py  annotation.py  banana_generation.py  base.py  image.py  image_editing.py  image_parsing.py  tag.py
backend/app/schemas/: ai_model.py  annotation.py  banana_generation.py  celery_queue.py  common.py  generation_outline.py  generation_slides.py  image_editing.py  image_manager.py  image_parsing.py  image_search.py  image_tagging.py  image_upload.py  layout_optimization.py  tag.py  tag_library.py  url_cache_refresh.py
backend/app/tasks/: __init__.py  banana_generation_tasks.py  image_editing_tasks.py  image_parsing_tasks.py  monitoring.py  refresh_tasks.py
backend/app/utils/: __init__.py  async_utils.py  config_utils.py  datetime_utils.py  file_utils.py  id_utils.py  json_utils.py  string_utils.py  validation_utils.py
backend/scripts/: init_banana_templates.py
backend/tests/: README.md  __init__.py  conftest.py  pytest.ini  run_all_tests.py  run_integration_tests.py  run_unit_tests.py
backend/tests/interface/: __init__.py  test_basic.py  test_images.py  test_tags.py
backend/tests/unit/: __init__.py  test_cos_service.py  test_css_utils.py  test_html_converter.py  test_html_parser.py  test_html_parser_advanced.py  test_html_parser_integration.py  test_id_generator.py  test_image_service.py  test_imports.py  test_layout_optimization_service.py  test_log_utils.py  test_svg_elements.py  test_tag_service.py  test_url_cache.py
backend/tests/utils/: __init__.py  database_utils.py  mock_utils.py  test_data_utils.py
docs/: README.md
(+249 files in other folders)
